--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,19 +1,41 @@
-.home-swipe {
+.mint-swipe {
   height: 200px;
+
   .mint-swipe-item {
-    &:nth-child(1){
+    &:nth-child(1) {
       background-color: yellow
     }
-    &:nth-child(2){
+
+    &:nth-child(2) {
       background-color: red
     }
-    &:nth-child(3){
+
+    &:nth-child(3) {
       background-color: aqua
     }
+
     img {
       width: 100%;
       height: 100%;
     }
 
+  }
+}
+
+.mui-table-view,
+.mui-grid-view {
+  background-color: #fff !important;
+  height: 100%;
+
+  li {
+    border: 0 !important;
+
+    div {
+      font-size: 13px !important;
+    }
+  }
+  img {
+    width: 60px;
+    height: 60px;
   }
 }
